# goodweguardian

./: .dockerignore  .gitignore  CONTROL_NOTES.md  Dockerfile  PLANNING_SYSTEM.md  baseline_info.py  dashboard.js  dashboard_ui.html  docker-compose.prod.yml  docker-compose.yml  eco_encoder.py  economics.py  ecoslot_config.py  ecoslot_service.py  energy_pricing.py  ev_charging_plan.py  ev_charging_store.py  guardian_config.py  guardian_control.py  guardian_dashboard.py  guardian_execution.py  guardian_log.py  guardian_logic.py  guardian_state.py  guardian_watchdog_override.py  hourly_balance_run.py  load_forecast.py  main.py  planner_control.py  pse_rce.py  pv_forecast.py  pv_pyramid.py  pyproject.toml  read_ecoslots.py  read_selected_sensors.py  read_sensors.py  sensor_mapping.py  tariff_g12.py  telemetry_store.py  tesla_wall_charger.py
docs/: FUTURE_IDEAS.md
planner/: __init__.py  __main__.py  audit.py  battery.py  config.py  cvar_calibrate.py  day_audit.py  ecoslot_scenario_optimizer.py  ecoslot_scenarios.py  guardian_policy.py  hour_plan_export.py  hour_remainder.py  inputs.py  models.py  optimizer.py  plan_store.py  plan_target.py  policy_output.py  pricing_horizon.py  pv_correction.py  reconcile.py  review.py  risk_optimizer.py  scenario_optimizer.py  scenarios.py  service.py  telemetry.py
reference/: load_forecast_backtest_baseline.json
scripts/: daily_audit.sh
tests/: conftest.py  test_cvar_calibrate.py  test_dashboard_planner_policy.py  test_dashboard_ui_served.py  test_economics.py  test_ecoslot_dashboard_api.py  test_ecoslot_optimizer.py  test_planner.py  (+36 more)
(+10 files in other folders)
