[project]
name = "goodweguardian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "pydantic>=2.0.0",
    "goodwe>=0.4.9",
    "pytest>=9.0.2",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.42.0",
    "httpx>=0.27.0",
    "tzdata>=2024.1",
    "scipy>=1.17.1",
]
